--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name"></string>
+    <string name="app_name">FxBook</string>
     <string name="action_settings">Settings</string>
     <string name="drawer_open">DrawerOpen</string>
     <string name="drawer_close">DrawerOpen</string>
